     taking a QMargins object allowing for conveniently adding or removing
     margins.
 - QMargins:
   * Added operators for adding and subtracting QMargins objects,
     multiplication and division for int/qreal and unary minus.

 - QMessageAuthenticationCode
    * New class for hash-based message authentication code added to QtCore.

 - QRegularExpression
    * It's now possible to know the names of the named capturing groups
      inside the pattern string, as well as the numerical index of each
      named capturing group.

 - QPointer
    * It is now possible to create a QPointer with a const templated type.

 -

QtGui
-----

 - QOffscreenSurface
    * New class for rendering graphics using OpenGL in an arbitrary thread
      without needing to use a hidden QWindow.


QtNetwork
---------

 -



****************************************************************************
*                          Database Drivers                                *
****************************************************************************


****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************

Qt for Linux/X11
----------------
 -

Qt for Windows
--------------
 -

Qt for Mac OS X
---------------
 -

Qt for Embedded Linux
---------------------


Qt for Windows CE
-----------------


****************************************************************************
*                      Compiler Specific Changes                           *
****************************************************************************


****************************************************************************
*                          Plugins                                         *
****************************************************************************

